# LatinSquareGenerator

./: .gitignore  CMakeLists.txt  LICENSE  LatinSquare.cpp  LatinSquare.hpp  LatinSquareCell.cpp  LatinSquareCell.hpp  LatinSquareGenerator.cpp  LatinSquareGenerator.hpp  LatinSquareUtils.cpp  LatinSquareUtils.hpp  Main.cpp  PrintingUtils.cpp  README.md  WaveFunctionCollapseAlgorithm.cpp  WaveFunctionCollapseUtils.cpp  compile.bat
LinuxCompilation/: CMakeLists.txt  compile.sh  conanfile.txt
Sources/: SudokuSolverAPI.java
src/: LatinSquare.cpp  LatinSquare.hpp  LatinSquareBacktrackingData.cpp  LatinSquareBacktrackingData.hpp  LatinSquareCell.cpp  LatinSquareCell.hpp  LatinSquareEntropyData.cpp  LatinSquareEntropyData.hpp  LatinSquareGenerator.cpp  LatinSquareGenerator.hpp  LatinSquarePrintingUtils.cpp  LatinSquarePrintingUtils.hpp  LatinSquareRegion.cpp  LatinSquareRegion.hpp  LatinSquareRegions.cpp  LatinSquareRegions.hpp  LatinSquareTransversalBacktrackingData.cpp  LatinSquareTransversalBacktrackingData.hpp  LatinSquareTransversalGenerator.cpp  LatinSquareTransversalGenerator.hpp  LatinSquareTransversalSearcher.cpp  LatinSquareTransversalSearcher.hpp  LatinSquareTransversalUpdateData.cpp  LatinSquareTransversalUpdateData.hpp  LatinSquareUpdateData.cpp  LatinSquareUpdateData.hpp  LatinSquareUtils.cpp  LatinSquareUtils.hpp  Main.cpp  Main.hpp  cpp_utils.cpp  cpp_utils.hpp
src/LatinSquare/: BacktrackingData.cpp  BacktrackingData.hpp  Cell.cpp  Cell.hpp  Constants.hpp  EntropyData.cpp  EntropyData.hpp  Generator.cpp  Generator.hpp  LatinSquare.cpp  LatinSquare.hpp  Region.cpp  Region.hpp  SymmetricLatinSquare.cpp  SymmetricLatinSquare.hpp  TriangularRegion.cpp  TriangularRegion.hpp  Types.hpp  UpdateData.cpp  UpdateData.hpp  Utils.cpp  (+1 more)
test_ls/: template10x10sdm  template10x10sm  template10x10symmax  template12x12sdm  template5x5m  template6x6max  template6x6r  template7x7m  template7x7sym  template7x7symmax  template8x8max  template8x8maxfilled  template8x8symmax  template9x9sdm  template9x9sm  template9x9symmax  test10x10sym  test11x11c  test13x13c  test13x13scm  test16x16d  test16x16r  test16x16sm  test17x17c  test19x19c  test24x24a  test4x4sm  test50x50r  test5x5m  test5x5min  test5x5sm  test64x64r  test6x6sm  test7x7c  test7x7smtr  test7x7symfilled  test7x7symmax  test7x7symmin  test8x8d  test9x9am  (+3 more)
(+21 files in other folders)
